fix: Reduce spacing between ``

--- a/src/scss/styles/buttons.scss
+++ b/src/scss/styles/buttons.scss
@@ -99,7 +99,7 @@
 		font-size: prem($font-btn-size);
 		line-height: prem(28);
 		padding-right: $dashWidth--hover - $dashWidth;
-		margin-right: prem(30);
+		margin-right: prem(15);
 		margin-bottom: prem(16);
 		color: $color-faxafloi-100;
 		font-weight: 700;
